# oqd-teaching-demo

./: .gitignore  README.md  mkdocs.yaml  pyproject.toml
app/src/components/: Logo.tsx
app/src/lib/: random.tsx
design/: wiring.fzz
design/objects/: camera-laser-rack.stl  electronics-plate.stl  joint1.stl  joint2.stl  oqd-enclosure-base.stl  oqd-enclosure-top-lid.stl  side-laser-holder.stl  vacuum-bottom.stl  vacuum-top.stl
docs/: assembly.md  bill_of_materials.md  index.md  materials.md  quantum-computers.md
docs/explanation/: 3dprint.md  assembly.md  electronics.md  introduction.md  software.md
pancake/: .gitignore  analog.py  base.py  control.py  emulator.py  program.py  visualization.py
pancake/api/: app.py  main.py  routes.py
pancake/app/: index.html  package-lock.json  package.json  vite.config.ts
pancake/backend/: emulator.py
pancake/compiler/: compiler.py
pancake/control/: camera.py  config.py  demo.py  device.py  lasers.py  trap.py
pancake/gui/: main.py  programs.py  style.py  style.qss  tab_device.py  tab_program.py  thread_device.py
pancake/host/: routes.py
pancake/interface/: interface.py
pancake/nicegui/: camera_stream.py  main.py  programs.py
pancake/src/api/: routes.py
pancake/visualization/: visualization.py
src/: analog.py  digital.py  emulator.py  program.py  visualization.py
src/api/: routes.py
src/app/: index.html  tailwind.config.js
src/compiler/: __init__.py  compiler.py
src/control/: camera.py  config.py  device.py  lasers.py  trap.py
src/gui/: __init__.py  camera_stream.py  main.py  programs.py
src/oqd_teaching_demo/: base.py  visualization.py
tests/: pwm_test.py  test_camera_ui.py  test_laser_circuit.py
(+24 files in other folders)
