[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "pancake"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "PySide6",
    "pydantic",
#    "picamera2",
    "gpiozero",
#    "RPi.GPIO",
]
[project.optional-dependencies]
docs = [
    "pymdown-extensions",
    "mkdocstrings",
    "mkdocs-material",
    "mkdocstrings-python",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pancake"]
